modified SelectService